# ros2_ws

install/: local_setup.sh  setup.sh
install/demo_rviz/lib/demo_rviz/: cmd_publisher  robot_node  talker
install/demo_rviz/share/ament_index/resource_index/package_run_dependencies/: demo_rviz
install/demo_rviz/share/ament_index/resource_index/parent_prefix_path/: demo_rviz
install/demo_rviz/share/demo_rviz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/demo_rviz/share/demo_rviz/cmake/: demo_rvizConfig-version.cmake  demo_rvizConfig.cmake
install/demo_rviz/share/demo_rviz/environment/: ament_prefix_path.dsv  path.dsv
install/object_detection_node/share/ament_index/resource_index/package_run_dependencies/: object_detection_node
install/object_detection_node/share/object_detection_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/object_detection_node/share/object_detection_node/cmake/: object_detection_nodeConfig-version.cmake  object_detection_nodeConfig.cmake
install/object_detection_node/share/object_detection_node/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/demo_rviz/: CMakeLists.txt  package.xml
src/demo_rviz/src/: cmd_publisher.cpp  robot_node.cpp  talker.cpp
src/object_detection_node/: CMakeLists.txt  package.xml
(+1 files in other folders)
